[package]
name = "rusty_sword_arena"
version = "1.3.0"
authors = ["Nathan Stocks <cleancut@github.com>"]
description = "Library/repository for the half-day Rust tutorial teaching you how to make a game client in Rust."
documentation = "https://agileperception.com/doc/rusty_sword_arena/"
homepage = "https://conferences.oreilly.com/oscon/oscon-or/public/schedule/detail/75769"
repository = "https://github.com/CleanCut/rusty_sword_arena"
readme = "README.md"
keywords = ["tutorial", "rusty", "sword", "arena", "learn"]
license = "MIT"
edition = "2018"

[dependencies]
# For graphics support 👾 (OpenGL) -- TODO: Switch to rendy
glium = "0.25"
image = "0.21"

# Networking support -- TODO: Switch to grpc or twirp
zmq = "0.9"

# The following three are all so we can send Rust values over the network
# ----
# The core serde APIs, including the Serialize and Deserialize traits.
serde = { version = "1.0", features = ["derive"] }

# The format we want to serialize to/from.
bincode = "1.0"

# For random numbers! 🎲
rand = "0.6"

# For playing sound 🔊
rodio = "0.9.0"